--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-open": "^0.3.2",
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
-    "gulp-sourcemaps": "^1.5.2"
+    "gulp-sourcemaps": "^1.5.2",
+    "nodemon": "^1.3.7"
   }
 }
