--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JustinWebb/constellation.git"
+    "url": "https://github.com/relentlessbreakfast/constellation.git"
   },
   "author": "Justin Webb",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JustinWebb/constellation/issues"
+    "url": "https://github.com/relentlessbreakfast/constellation/issues"
   },
-  "homepage": "https://github.com/JustinWebb/constellation",
+  "homepage": "https://github.com/relentlessbreakfast/constellation",
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "express": "^4.12.4",
@@ -25,6 +26,8 @@
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
     "gulp-sourcemaps": "^1.5.2",
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "mysql": "^2.6.2",
+    "sequelize": "^3.1.1"
   }
 }
