--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "browser-sync": "^2.7.5",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
+    "gulp-copy": "0.0.2",
     "gulp-jshint": "^1.11.0",
+    "gulp-nodemon": "^2.0.3",
     "gulp-open": "^0.3.2",
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
     "gulp-sourcemaps": "^1.5.2",
-    "nodemon": "^1.3.7",
-    "mysql": "^2.6.2",
     "sequelize": "^3.1.1"
   }
 }
