Adds a sample JSON file to the documentation folder and .gitignore now ignores notes folder

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ coverage
 build/Release
 build/
 
+# Notes folder
+notes/
+
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules/
