--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.7.5",
+    "del": "^1.2.0",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
     "gulp-copy": "0.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-nodemon": "^2.0.3",
@@ -29,6 +29,7 @@
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
     "gulp-sourcemaps": "^1.5.2",
-    "sequelize": "^3.1.1"
+    "sequelize": "^3.1.1",
+    "gulp-util": "^3.0.4"
   }
 }
