--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "del": "^1.2.0",
+    "event-stream": "^3.3.1",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.5.2",
     "gulp-copy": "0.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-nodemon": "^2.0.3",
@@ -30,6 +32,9 @@
     "gulp-shell": "^0.4.1",
     "gulp-sourcemaps": "^1.5.2",
     "sequelize": "^3.1.1",
-    "gulp-util": "^3.0.4"
+    "gulp-util": "^3.0.4",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.4",
+    "stream-series": "^0.1.1"
   }
 }
