--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> Cut though the confusion",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "node test"
+    "test": "karma start karma.confg.js"
   },
   "repository": {
     "type": "git",
@@ -20,23 +20,25 @@
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "del": "^1.2.0",
-    "event-stream": "^3.3.1",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
     "gulp-changed": "^1.2.1",
-    "gulp-concat": "^2.5.2",
     "gulp-clean": "^0.3.1",
-    "gulp-copy": "0.0.2",
+    "gulp-concat": "^2.5.2",
+    "gulp-html2js": "^0.2.0",
     "gulp-jshint": "^1.11.0",
     "gulp-nodemon": "^2.0.3",
-    "gulp-open": "^0.3.2",
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
     "gulp-sourcemaps": "^1.5.2",
-    "sequelize": "^3.1.1",
-    "gulp-util": "^3.0.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.4",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.35",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "phantomjs": "^1.9.17",
+    "sequelize": "^3.1.1",
     "stream-series": "^0.1.1"
   }
 }
