--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "del": "^1.2.0",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.3.0",
     "gulp-changed": "^1.2.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-html2js": "^0.2.0",
+    "gulp-inject": "^1.2.0",
     "gulp-jshint": "^1.11.0",
+    "gulp-ng-annotate": "^1.0.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-sass": "^2.0.1",
     "gulp-shell": "^0.4.1",
