Revert "(feat & docs) Initiate setup of postgreSQL db, create sample JSON data"

--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "url": "https://github.com/relentlessbreakfast/constellation/issues"
   },
   "homepage": "https://github.com/relentlessbreakfast/constellation",
-  "dependencies": {
-    "pg": "^4.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "del": "^1.2.0",
