--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular-ui-router": "~0.2.15",
     "font-awesome": "~4.3.0",
     "angular": "~1.4.0",
-    "angular-animate": "~1.4.0"
+    "angular-animate": "~1.4.0",
+    "dagre-d3": "~0.4.8"
   }
 }
