--- a/.jshintrc
+++ b/.jshintrc
@@ -20,6 +20,7 @@
     "white": true,
     "globals": {
         "angular": false,
-        "d3": false
+        "d3": false,
+        "dagreD3": false
     }
 }
