--- a/.jshintrc
+++ b/.jshintrc
@@ -21,6 +21,19 @@
     "globals": {
         "angular": false,
         "d3": false,
-        "dagreD3": false
+        "dagreD3": false,
+
+        // Karma, Mocha
+        "describe": false,
+        "xdescribe": false,
+        "ddescribe": false,
+        "it": false,
+        "xit": false,
+        "iit": false,
+        "beforeEach": false,
+        "afterEach": false,
+        "expect": false,
+        "pending": false,
+        "spyOn": false
     }
 }
