--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "> Cut though the confusion",
   "main": "gulpfile.js",
   "scripts": {
-<<<<<<< HEAD
-    "test": "karma start karma.config.js"
-=======
-    "testfront": "karma start karma.confg.js"
->>>>>>> (feat) Add Mocha, Chai, and Supertest for backend testing
+    "testfront": "karma start karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +35,8 @@
     "gulp-html2js": "^0.2.0",
     "gulp-inject": "^1.2.0",
     "gulp-jshint": "^1.11.0",
+    "gulp-mocha": "^2.1.0",
+    "gulp-mocha-tdd": "^0.4.2",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-sass": "^2.0.1",
