--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^2.9.27",
     "fs": "0.0.2",
     "github": "^0.2.4",
+    "morgan": "^1.5.3",
     "pg": "^4.3.0"
   },
   "devDependencies": {
