--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "font-awesome": "~4.3.0",
     "angular": "~1.4.0",
     "angular-animate": "~1.4.0",
-    "dagre-d3": "~0.4.8"
+    "dagre-d3": "~0.4.8",
+    "ng-contextmenu": "~0.3.2"
   }
 }
