--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "chai": "^2.3.0",
+    "cors": "^2.7.1",
     "del": "^1.2.0",
     "express": "^4.12.4",
     "gulp": "^3.8.11",
