--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "npm": "2.7.4"
   },
   "scripts": {
-    "start": "node server/server.js",
-    "test": "mocha server/*",
-    "postinstall": "bower install && gulp build"
+    "test": "mocha ./server/*",
+    "prepublish": "bower install && gulp build",
+    "start": "node ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   "dependencies": {
     "bluebird": "^2.9.27",
     "body-parser": "^1.12.4",
+    "cors": "^2.7.1",
     "dotenv": "^1.1.0",
+    "express": "^4.12.4",
     "github": "^0.2.4",
     "morgan": "^1.5.3",
     "pg": "^4.3.0"
@@ -33,9 +35,7 @@
   "devDependencies": {
     "browser-sync": "^2.7.5",
     "chai": "^2.3.0",
-    "cors": "^2.7.1",
     "del": "^1.2.0",
-    "express": "^4.12.4",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.3.0",
     "gulp-changed": "^1.2.1",
