--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^4.3.0"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "browser-sync": "^2.7.5",
     "chai": "^2.3.0",
     "del": "^1.2.0",
