(fix) Consolidate dependencies, normalize build path, build postinstall

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "test": "mocha ./server/*",
-    "prepublish": "bower install && gulp build",
-    "start": "node ./server/server.js"
+    "prepublish": "bower install",
+    "start": "node ./server/server.js",
+    "postinstall": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -30,9 +31,7 @@
     "express": "^4.12.4",
     "github": "^0.2.4",
     "morgan": "^1.5.3",
-    "pg": "^4.3.0"
-  },
-  "devDependencies": {
+    "pg": "^4.3.0",
     "bower": "^1.4.1",
     "browser-sync": "^2.7.5",
     "chai": "^2.3.0",
@@ -65,4 +64,3 @@
     "stream-series": "^0.1.1",
     "supertest": "^1.0.1"
   }
-}
